# Eco_Connect

./: .gitignore  .replit  DATABASE_CONFIG_README.txt  README.md  app.py  babel.cfg  config.py  init_db.py  package-lock.json  package.json  pyproject.toml  replit.md  replit.nix  requirements.txt  translations.py  waste_management.db
Arduino/weight/: weight.ino
attached_assets/: Pasted-I-want-to-build-a-complete-web-app-using-Flask-Python-for-backend-and-HTML-CSS-JS-and-Bootstrap-1761739972859_1761739972862.txt
static/: style.css
static/css/: style.css
static/js/: charts.js  script.js
templates/: base.html  bottom_nav.html  login.html  signup.html
templates/collector/: analytics.html  complaints.html  dashboard.html  sell.html
templates/government/: analytics.html  complaints.html  dashboard.html  transactions.html
templates/recycler/: buy.html  complaint.html  sell.html
templates/user/: complaint.html  dashboard.html  sell.html
