[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Eco Connect Web App"
requires-python = ">=3.11"

dependencies = [
   "Flask==2.3.3",
    "babel"==2.0.0,
    "Flask-Login==0.6.3",
    "Flask-Babel==2.0.0",
    "SQLAlchemy==2.0.40",
    "PyMySQL==1.1.0",
    "Pillow==10.2.0",
    "Werkzeug==2.3.7",
    "gunicorn==23.0.0"

]